# Pure Python sources
python_sources = [
    '__init__.py',
    'eshelby_slow.py',
    'gradient_integration.py',
    'linear_finite_elements.py',
    'sensitivity_analysis.py',
    'stochastic_plasticity_search.py',
    'vtk_export.py'
]

# Install pure Python
python.install_sources(
    python_sources,
    subdir: 'muSpectre'
)
